--- a/index.Rmd
+++ b/index.Rmd
@@ -1,9 +1,9 @@
 --- 
-title: "YOUR TITLE HERE"
-author: "YOUR NAME HERE"
+title: "NFWF QUARTERLY REPORT"
+author: ""
 date: "`r Sys.Date()`"
 site: bookdown::bookdown_site
 ---
 
-# Down the rabbit-hole
+# NFWF QUARTERLY REPORT
 
