--- a/05-heatmaps.Rmd
+++ b/05-heatmaps.Rmd
@@ -1,6 +1,6 @@
 # Heat Maps
   
-Suwannee River discharge is known to influence salinity in Suwannee Sound (Orlando et al. 1993) and lags between Suwannee River discharge and oyster counts have been observed (Moore et al. 2020).  River discharge is essentially a second “treatment” in this restoration project (after the rebuilding of the reef) because it is the freshwater from the Suwannee River that Lone Cabbage Reef is thought to detain thus possibly promoting lower salinity.  River discharge patterns in the Suwanee River basin may be changing over decadal scales due to changing climate, as is hypothesized for large rivers in the Gulf of Mexico (Neupane et al. 2019).  For the period of record for the USGS Wilcox gauge (02323500) which begins in October 1930, we created a “heat map” that demonstrates for each month and year the deviation in river discharge (as a percentage) from the period of record average (Figures 23-25).  
+Suwannee River discharge is known to influence salinity in Suwannee Sound (Orlando et al. 1993) and lags between Suwannee River discharge and oyster counts have been observed (Moore et al. 2020).  River discharge is essentially a second “treatment” in this restoration project (after the rebuilding of the reef) because it is the freshwater from the Suwannee River that Lone Cabbage Reef is thought to detain thus possibly promoting lower salinity.  River discharge patterns in the Suwanee River basin may be changing over decadal scales due to changing climate, as is hypothesized for large rivers in the Gulf of Mexico (Neupane et al. 2019).  For the period of record for the USGS Wilcox gauge (02323500) which begins in October 1930, we created a “heat map” that demonstrates for each month and year the deviation in river discharge (as a percentage) from the period of record average.  
 ```{r setup, include=FALSE}
 knitr::opts_chunk$set(echo = TRUE)
 library("waterData")
