--- a/index.Rmd
+++ b/index.Rmd
@@ -83,7 +83,7 @@ D.	Existing or anticipated problems with implementation of Task 4.
  No problems are anticipated with the implementation of Task 4, which is complete. 
   
 
-Task 5. Post-Construction Monitoring  
+**Task 5. Post-Construction Monitorin**  
 A.	 Work performed on Task 5. 
 
 Water quality and spat sampling. We have continued water quality and spat monitoring during the reporting period.
